--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,20 @@
 <body>
 
 	<div class="row">
+		<div class="medium-12 columns">
+			<div class="callout primary">
+				<h1>We are so BlUE right now.</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+					culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</div>
+		</div>
+	</div>
 
+	<div class="row">
 		<div class="medium-12 columns">
 			<h1>ci-test has been scaffolded, yo!</h1>
 			<p class="lead">With layouts and styling by foundation</p>
@@ -34,8 +47,6 @@
 						<i class="fa fa-thumbs-o-up"></i>
 					
 				</p>
-
-			
 
 			<demo></demo>
 
