--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,21 @@
 		body {
 			padding-top: 50px;
 		}
+
+		.green {
+			background: #06AB06;
+			border: none;
+		}
+
+		.blue {
+			background: #00A1FF;
+			border: none;
+		}
+
+		.panel, .panel h1, .panel p {
+			color: #FFF;
+		}
+
 	</style>
 
 	<!--[if lt IE 9]>
@@ -24,9 +39,10 @@
 
 	<div class="row">
 		<div class="medium-12 columns">
-			<div class="callout primary">
-				<h1>We are so BlUE right now.</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+			<div class="panel radius green">
+				<h1>We are so BLUE right now.</h1>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 					aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
@@ -43,9 +59,7 @@
 			
 				<p>
 					Plus sweet font-awesome icons
-					
-						<i class="fa fa-thumbs-o-up"></i>
-					
+					<i class="fa fa-thumbs-o-up"></i>
 				</p>
 
 			<demo></demo>
