--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 		}
 
 		.green {
-			background: #06AB06;
+			background: #56B756;
 			border: none;
 		}
 
@@ -39,7 +39,7 @@
 
 	<div class="row">
 		<div class="medium-12 columns">
-			<div class="panel radius green">
+			<div class="panel radius blue">
 				<h1>We are so BLUE right now.</h1>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
