--- a/public/index.html
+++ b/public/index.html
@@ -39,8 +39,8 @@
 
 	<div class="row">
 		<div class="medium-12 columns">
-			<div class="panel radius blue">
-				<h1>We are so BLUE right now.</h1>
+			<div class="panel radius green">
+				<h1>My green box</h1>
 				<p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
 					et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
